--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>React App</title>
+    <title>E-Commerce Store by Daniel G</title>
     <script src="https://kit.fontawesome.com/0b2e7c2d7b.js" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   </head>
